5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4065/executions/1602_1446.log
== TEST (2019-03-20 19:03:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")
total = (qdl - 2/3)
print(total)
-- ERROR:
File "XXXX", line 5
    total = (qdl - 2/3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")
total = float(qdl - 2/3)
print(round(total,3))
-- ERROR:
File "XXXX", line 5
    total = float(qdl - 2/3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:04:52) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")
total = float(qdl - 2//3)
print(round(total,3))
-- ERROR:
File "XXXX", line 5
    total = float(qdl - 2//3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:05:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")
total = float(qdl-2/3)
print(round(total,3))
-- ERROR:
File "XXXX", line 5
    total = float(qdl-2/3)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:08:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")
qm = float(1/3)
total = float(qdl-2/3)
print(round(total,3))
-- ERROR:
File "XXXX", line 5
    qm = float(1/3)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:08:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")
qm = int(1/3)
total = float(qdl-2/3)
print(round(total,3))
-- ERROR:
File "XXXX", line 5
    qm = int(1/3)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:09:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")

total = float(qdl-(2/3))
print(round(total,3))
-- ERROR:
File "XXXX", line 6
    total = float(qdl-(2/3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:10:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")

total = float(qdl-(2/3))
print(round(total,3))
-- ERROR:
File "XXXX", line 6
    total = float(qdl-(2/3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:11:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")

total = float("qdl"-(2/3))
print(round(total,3))
-- ERROR:
File "XXXX", line 6
    total = float("qdl"-(2/3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:14:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")
ic = 2/3
total = float("qdl"- "ic")
print(round(total,3))
-- ERROR:
File "XXXX", line 5
    ic = 2/3
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:14:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")
ic = (2/3)
total = float("qdl"- "ic")
print(round(total,3))
-- ERROR:
File "XXXX", line 5
    ic = (2/3)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:14:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")
ic = float(2/3)
total = float("qdl"- "ic")
print(round(total,3))
-- ERROR:
File "XXXX", line 5
    ic = float(2/3)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:16:57) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")
ic = print(float(2/3))
total = float("qdl"- "ic")
print(round(total,3))
-- ERROR:
File "XXXX", line 5
    ic = print(float(2/3))
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:17:39) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")
ic = 1/2
total = float("qdl"- "ic")
print(round(total,3))
-- ERROR:
File "XXXX", line 5
    ic = 1/2
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:18:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")
ic = int(1/2)
total = float("qdl"- "ic")
print(round(total,3))
-- ERROR:
File "XXXX", line 5
    ic = int(1/2)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:18:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")
ic =(1/2)
total = float("qdl"- "ic")
print(round(total,3))
-- ERROR:
File "XXXX", line 5
    ic =(1/2)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:18:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")
ic =
total = float("qdl"- "ic")
print(round(total,3))
-- ERROR:
File "XXXX", line 5
    ic =
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:18:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")

total = float("qdl"- "ic")
print(round(total,3))
-- ERROR:
File "XXXX", line 6
    total = float("qdl"- "ic")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:18:41) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")


print(round(total,3))
-- ERROR:
File "XXXX", line 7
    print(round(total,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:18:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")



-- ERROR:
File "XXXX", line 7
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:18:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")

-- ERROR:
File "XXXX", line 5
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:19:06) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")

-- ERROR:
File "XXXX", line 5
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:19:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
qdl = float(input("quantidade de litros comprados: ")
-- ERROR:
File "XXXX", line 5
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:19:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = float(input("quantidade de litros comprados: ")
-- ERROR:
File "XXXX", line 5
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:19:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = float(input("quantidade de litros comprados: ")
-- ERROR:
File "XXXX", line 5
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:20:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var = float(input("quantidade de litros comprados: ")
-- ERROR:
File "XXXX", line 5
    
                       ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:20:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
var =float(input("quantidade de litros comprados: ")
				
-- ERROR:
File "XXXX", line 6
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:22:05) 
-- CODE:
var = float(input("quantidade de litros comprado: "))

-- ERROR:
File "XXXX", line 6
    
        ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:23:13) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
x = 2/3
total= var-2/3
print(round(total,3))

-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:23:20) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
x = 2/3
total= var-2/3
print(round(total,3))

-- EXECUTION TIME:
0.217951
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
6.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
19.333
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
14.333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:23:40) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
x = 2/3
total= var-2/3
print(round(total,3))

-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:24:09) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
x = 2/3
total= float(var-2/3)
print(round(total,3))

-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:24:25) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
x = 2/3
total= float(var- (2/3)
print(round(total,3))

-- ERROR:
File "XXXX", line 4
    print(round(total,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:24:45) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
x = 2/3
total= float(var- (2/3)
print(round(total,3))
-- ERROR:
File "XXXX", line 4
    print(round(total,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:25:10) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
x = 2/3
total= float(var- (2/3)
print(round(total,3))
-- ERROR:
File "XXXX", line 4
    print(round(total,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:25:24) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
x = 2/3
total= float(var- 2/3
print(round(total,3))
-- ERROR:
File "XXXX", line 4
    print(round(total,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:25:39) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
x = 2/3
total= float(var- 2/3
print(round(total,3))
-- ERROR:
File "XXXX", line 4
    print(round(total,3))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:26:07) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
x = 2/3
total= var- 2/3
print(round(total,3))
-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:26:37) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
x = 2/3
total= var-(2/3)
print(round(total,3))
-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:26:56) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
x = 2/3
total= var- x
print(round(total,3))
-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:27:16) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
x = 1/3
total= var- x
print(round(total,3))
-- OUTPUT:
6.667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:27:33) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
x = 1//3
total= var- x
print(round(total,3))
-- OUTPUT:
7.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:29:45) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
ic = 2/3
total= var- x
print(round(total,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    total= var- x
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:29:56) 
-- CODE:
var = float(input("quantidade de litros comprado: "))
ic = 2/3
total= var- ic
print(round(total,3))
-- OUTPUT:
6.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-20 19:30:30) 
-- CODE:
var = float(input("quantidade de litros comprado: "))

total= 1/3*var
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-20 19:30:37) 
-- CODE:
var = float(input("quantidade de litros comprado: "))

total= 1/3*var
print(round(total,3))
-- EXECUTION TIME:
0.192746
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 23:17:24) 
-- CODE:
var = float(input("quantidade de litros comprado: "))

total= 1/3*var
print(round(total,3))
-- OUTPUT:
2.333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 23:17:34) 
-- CODE:
var = float(input("quantidade de litros comprado: "))

total= 1/3*var
print(round(total,3))
-- EXECUTION TIME:
0.205157
-- TEST CASE 1:
---- input:
7
---- correct output:
2.333
---- user output:
2.333
-- TEST CASE 2:
---- input:
20.0
---- correct output:
6.667
---- user output:
6.667
-- TEST CASE 3:
---- input:
15
---- correct output:
5.0
---- user output:
5.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
